@@ -1,36 +1,0 @@
-/**
- * (c) Copyright 2012 WibiData, Inc.
- *
- * See the NOTICE file distributed with this work for additional
- * information regarding copyright ownership.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.kiji.mapreduce;
-
-import org.kiji.annotations.ApiAudience;
-import org.kiji.annotations.Inheritance;
-import org.kiji.schema.KijiDataRequest;
-
-/** Interface for classes that specify a set of columns to read from a kiji table. */
-@ApiAudience.Public
-@Inheritance.Extensible
-public interface KijiDataRequester {
-  /**
-   * Return a KijiDataRequest that describes which input columns need to be available.
-   *
-   * @return A kiji data request.
-   */
-  KijiDataRequest getDataRequest();
-}
